# github-research-tool

./: .gitignore  Cargo.toml  readme.MD
src/: data_analyzers.rs  discord_functions.rs  github_data_fetchers.rs  integrated_processors.rs  lib.rs  octocrab_compat.rs  octocrab_fetchers.rs  reports.rs  utils.rs
