[package]
name = "github-research-tool"
version = "0.1.1"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]


[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
openai-flows = "0.8.5"
tokio_wasi = { version = "1.25.1", features = ["macros", "rt"] }
anyhow = "1"
serde_json = "1"
http_req_wasi = {version = "0.10", features = ["wasmedge_ssl"]} 
urlencoding = "2.1.3"
flowsnet-platform-sdk = "0.1.5"
log = "0.4.19"
store-flows = "0.3.1"
discord-flows = "0.5.1"
base64 = "0.21.2"
twox-hash = "1.6.3"
derivative = "2.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
tiktoken-rs = "0.5.1"
